--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-271.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.35MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.44MB/s(Youtube:不良林), server: 103.173.155.72, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
   - {name: 🇻🇳 越南-207.0KB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.18MB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.44MB/s(Youtube:不良林)
       - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
