--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-207.0KB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.18MB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-955.4KB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-222.7KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-432.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-197.0KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20140, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-398.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: 36.137.102.237, port: 30080, type: trojan, password: 7b453cb8-9582-4e47-80ba-7809f6908d7f, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20080, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.06MB/s(Youtube:不良林), server: 172.104.244.36, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
