--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20050, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.77MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.25MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.26MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-644.0KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-172.8KB/s(Youtube:不良林), server: 103.173.155.72, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇩🇪 德国-773.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
+  - {name: 🇸🇬 新加坡-1.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.78MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.32MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-644.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-172.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-773.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
