--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-6.77MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.25MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-1.26MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.78MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20080, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
   - {name: 🇭🇰 香港-3.32MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-10.56MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇻🇳 越南-693.8KB/s(Youtube:不良林), server: 103.151.238.37, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.37}}
+  - {name: 🇨🇳 中国-742.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇻🇳 越南-693.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
